# gerador-de-senhas-python

./: .gitignore  README.md  gerador-cli.py  gerador.py  gerador_cli.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yaml
gui/: pop_up.py
gui/ui/: tela.ui
interface/: UI_main_window.py  main_window.py  ui_main_window.py
ui/: form.ui  main.ui  pop_up.py  tela.ui
utils/: cli_gen.py  msg_box.py  pop_up.py
