[tool.poetry]
name = "gerador-de-senhas-python"
version = "0.1.0"
description = ""
authors = ["Sandenberg Ferreira Melo <77549672+sandenbergmelo@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "<3.12,>=3.7"
PySide6 = "^6.5.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
