[tool.poetry]
name = "gerador-de-senhas-python"
version = "0.1.0"
description = ""
authors = [
    "Sandenberg Ferreira Melo <77549672+sandenbergmelo@users.noreply.github.com>",
]

[tool.poetry.dependencies]
python = ">=3.12.*,<3.13,"
pyside6 = "^6.7.2"

[tool.taskipy.tasks]
dev = 'python main.py'
run = 'python main.py'

lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
ruff = "^0.6.0"

[tool.ruff]
line-length = 79
extend-exclude = ['ui', 'interface/ui_*']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
