[project]
name = "gerador-de-senhas-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyside6>=6.8.0.2"]

[dependency-groups]
dev = ["ruff>=0.7.4", "taskipy>=1.14.0"]

[tool.ruff]
line-length = 79
extend-exclude = ['ui', 'interface/ui_*']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
dev = 'python main.py'
run = 'python main.py'
convert-ui = 'pyside6-uic ui/main.ui -o interface/ui_main_window.py'

lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
